# ros2-turtle-controller

./: .gitignore  Dockerfile  README.md
src/my_cpp_turtle/: CMakeLists.txt  package.xml
src/my_cpp_turtle/src/: my_first_node.cpp  turtle_controller.cpp  turtle_spawner.cpp
src/my_py_turtle/: package.xml  setup.cfg  setup.py
src/my_py_turtle/my_py_turtle/: my_first_node.py  turtle_controller.py  turtle_controller_v1.py  turtle_spawner.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/config/: turtle_controller.yaml  turtle_controller_multi.yaml
src/my_robot_bringup/launch/: number_app.launch.py  turtle_controller.launch.xml  turtle_controller_cpp.launch.xml  turtle_controller_multi.launch.xml  turtle_controller_multi_cpp.launch.xml
src/my_robot_controller/: setup.py
src/my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  pose_subscriber.py  turtle_controller.py  turtle_controller_bkp.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: HardwareStatus.msg  Turtle.msg  TurtleArray.msg
src/my_robot_interfaces/srv/: SpawnTurtle.srv
